papago nmt 수정 1차

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -186,7 +186,7 @@
 
                 </LinearLayout>
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/transtv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignLeft="@+id/linearLayout1"
